tests/baselines/reference/selfReference.errors.txt
tests/cases/compiler/selfReference.ts(2,12): error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.


==== tests/cases/compiler/selfReference.ts (1 errors) ====
    declare function asFunction<T>(value: T): () => T;
    asFunction(() => { return 1; });
               ~~~~~~~~~~~~~~~~~~~
!!! error TS7024: Function implicitly has return type 'any' because it does not have a return type annotation and is referenced directly or indirectly in one of its return expressions.